<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background5"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtViewDari"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/judul_dari" />

    <Spinner
        android:id="@+id/spinnerBhsOrg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtViewDari"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:entries="@array/pilih_bahasa_dari"
        android:prompt="@string/judul_pilih_bahasa" />

    <TextView
        android:id="@+id/txtViewKe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerBhsOrg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/judul_ke" />

    <Spinner
        android:id="@+id/spinnerBhsDest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtViewKe"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:entries="@array/pilih_bahasa_ke"
        android:prompt="@string/judul_pilih_bahasa" />

    <Button
        android:id="@+id/buttonLanjutInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerBhsDest"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/next_butt" />

</RelativeLayout>
